--- a/SBA_307_HTML_and_CSS/contact_styles.css
+++ b/SBA_307_HTML_and_CSS/contact_styles.css
@@ -100,11 +100,9 @@ hr {
     padding-right: 10px; */
     /* border: 1px solid red; */
 
-    display: grid;
-    grid-template-rows: 3fr 1fr 3fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    flex-wrap: wrap;
-    align-items: stretch;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     width: 100%;
     height: 95%;
@@ -218,10 +216,6 @@ img {
     max-height: 100%;
 }
 
-a {
-    color: #EBF4DD;
-}
-
 /* Nav Bar */
 .menu {
     background-color: #213448;
@@ -246,6 +240,7 @@ a {
 
 .navlink {
     text-decoration: none;
+    color: #EBF4DD
 }
 
 .plink {
@@ -261,4 +256,61 @@ a {
 footer {
     padding: 2.5%;
     color: #EAE0CF;
+}
+
+/* forms */
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 50%;
+    /* margin-left: 25%;
+    margin-right: 25%; */
+    background-color: #EFECE3;
+    box-shadow: 10px 10px #D6F4ED;
+}
+
+#title {
+    font-family: "BBH Bogle", sans-serif;
+    color: black;
+}
+
+#UserName {
+    margin: 5%;
+    
+    background-color: #EAE0CF;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+}
+
+input {
+    font-family: "BBH Bogle", sans-serif;
+    color: black;
+    font-size: large;
+}
+
+#message {
+    margin: 5%;
+    background-color: #EAE0CF;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+}
+
+#title {
+    text-align: center;
+}
+
+button {
+    margin: 5%;
+    width: 200px;
+    height: 50px;
+    font-family: "BBH Bogle", sans-serif;
+    background-color: #EAE0CF;
+    font-size: larger;
+    border-radius: 10px;
 }
