--- a/SBA_307_HTML_and_CSS/project_styles.css
+++ b/SBA_307_HTML_and_CSS/project_styles.css
@@ -2,7 +2,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: #FFF7D1;
+    background-color: #563A9C;
 }
 
 
@@ -42,7 +42,7 @@ h3 {
     padding-top: 1%;
     padding-bottom: 1%;
     /* box-shadow: 10px 10px #5A7863; */
-    border-bottom: 3px solid #FFC400;
+    border-bottom: 3px solid #FFF7D1;
     height: 80vh;
 }
 
@@ -101,14 +101,13 @@ hr {
     /* border: 1px solid red; */
 
     display: grid;
-    grid-template-rows: 3fr 1fr 3fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    
     flex-wrap: wrap;
     align-items: stretch;
 
     width: 100%;
     height: 95%;
-    background-color: #6A42C2;
+    background-color: #563A9C;
     border-radius: 20px;
 }
 
@@ -164,7 +163,7 @@ img {
     /* border: 1px solid black; */
     margin-top: 0px;
     margin-left: 0%;
-    color: #EAE0CF;
+    color: #FFF7D1;
     text-align: center;
 }
 
@@ -177,7 +176,7 @@ img {
     
     font-size: 2vw;
     
-    background-color: #547792;
+    background-color: #6A42C2;
     border-radius: 25px;
     /* border: 1px solid black; */
 
@@ -206,8 +205,9 @@ img {
 
     font-size: 150%;
     text-align: center;
+    color: #FFF7D1;
 
-    background-color: #547792;
+    background-color: #6A42C2;
     border-radius: 25px;
     /* border: 1px solid black; */
     
@@ -219,15 +219,15 @@ img {
 }
 
 a {
-    color: #EBF4DD;
+    color: #FFF7D1;
 }
 
 /* Nav Bar */
 .menu {
-    background-color: #FFF7D1;
+    background-color: #563A9C;
     top: 0;
     padding-top: 1%;
-    border-bottom: 3px solid #EBF4DD;
+    border-bottom: 3px solid #FFF7D1;
 }
 
 .navlinks {
@@ -260,5 +260,41 @@ a {
 
 footer {
     padding: 2.5%;
-    color: black;
+    color: #FFF7D1;
+}
+
+.projects-title {
+    text-align: center;
+    font-size: 10vw;
+    color: #FFF7D1;
+    font-family: "BBH Bogle", sans-serif;
+
+    margin-top: 5%;
+    margin-bottom: 0%;
+    margin-bottom: 2.5%;
+    padding-bottom: 0%;
+}
+
+/* Table */
+table {
+  border: 3px solid #FFF7D1;
+}
+
+td {
+    border: 3px solid #FFF7D1;
+    text-align: center;
+    color: #FFF7D1;
+    font-family: "BBH Bogle", sans-serif;
+
+    padding: 1%;
+}
+
+tr {
+    border-radius: 25px;
+}
+
+table {
+  border-collapse: collapse;
+  margin: 4%;
+  margin-top: 0%;
 }
