--- a/SBA_307_HTML_and_CSS/project_styles.css
+++ b/SBA_307_HTML_and_CSS/project_styles.css
@@ -100,10 +100,9 @@ hr {
     padding-right: 10px; */
     /* border: 1px solid red; */
 
-    display: grid;
-    
-    flex-wrap: wrap;
-    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     width: 100%;
     height: 95%;
@@ -136,12 +135,6 @@ hr {
 
 section1-box1-imagebox {
     /* border: 5px solid red; */
-}
-
-img {
-    width: 30vw;
-    border-radius: 25px;
-    border: 1px solid black;
 }
 
 #section1-box1-title {
@@ -219,7 +212,7 @@ img {
 }
 
 a {
-    color: #FFF7D1;
+    color: #360185;
 }
 
 /* Nav Bar */
@@ -265,8 +258,8 @@ footer {
 
 .projects-title {
     text-align: center;
-    font-size: 10vw;
-    color: #FFF7D1;
+    font-size: 400%;
+    color: #360185;
     font-family: "BBH Bogle", sans-serif;
 
     margin-top: 5%;
@@ -281,7 +274,7 @@ table {
 }
 
 td {
-    border: 3px solid #FFF7D1;
+    border: 3px solid #360185;
     text-align: center;
     color: #FFF7D1;
     font-family: "BBH Bogle", sans-serif;
@@ -300,13 +293,22 @@ table {
 }
 
 .github-link:hover {
-    background-color: #8C00FF;
+    background-color: #8B5DFF;
     padding: 2.5%;
     border-radius: 10px;
 }
 
 .navlink:hover {
-    background-color: #8C00FF;
+    background-color: #8B5DFF;
     padding: 5%;
     border-radius: 10px;
+}
+
+.pokemon-div {
+    display: flex;
+    justify-content: space-around;
+}
+
+.pokemon {
+    width: 25%;
 }
